--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
   <div class="click-closed"></div>
   <!--/ Form Search Star /-->
-  <div class="box-collapse">
+  <!-- <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
     </div>
@@ -127,7 +127,7 @@
         </div>
       </form>
     </div>
-  </div>
+  </div> -->
   <!--/ Form Search End /-->
 
   <!--/ Nav Star /-->
@@ -175,10 +175,10 @@
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
