--- a/blog-grid.html
+++ b/blog-grid.html
@@ -38,7 +38,7 @@
 
   <div class="click-closed"></div>
   <!--/ Form Search Star /-->
-  <div class="box-collapse">
+  <!-- <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
     </div>
@@ -127,7 +127,7 @@
         </div>
       </form>
     </div>
-  </div>
+  </div> -->
   <!--/ Form Search End /-->
 
   <!--/ Nav Star /-->
