--- a/fah.html
+++ b/fah.html
@@ -38,7 +38,7 @@
 
   <div class="click-closed"></div>
   <!--/ Form Search Star /-->
-  <div class="box-collapse">
+  <!-- <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
     </div>
@@ -127,7 +127,7 @@
         </div>
       </form>
     </div>
-  </div>
+  </div> -->
   <!--/ Form Search End /-->
 
   <!--/ Nav Star /-->
@@ -139,7 +139,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Estate<span class="color-b">Agency</span></a>
+      <a class="navbar-brand text-brand" href="index.html"><span><img src="img/images/y.png"></span></a>
       <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -150,35 +150,26 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#client">Client</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="property-grid.html">Property</a>
+            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog-grid.html">Blog</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Pages
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="property-single.html">Property Single</a>
-              <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-              <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
-              <a class="dropdown-item active" href="agent-single.html">Agent Single</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#team">Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
@@ -236,57 +227,15 @@
                   <p class="content-d color-text-a">
                    Denis Nene is a high level performer with experience in accounting, finance and banking. He is a PhD and Masters holder in Finance from Kenya Methodist University. He brings seven years of expertise in finance and accounting to the company as the Finance and admin Head.
                   </p>
-                  <div class="info-agents color-a">
-                    <p>
-                      <strong>Phone: </strong>
-                      <span class="color-text-a"> +54 356 945234 </span>
-                    </p>
-                    <p>
-                      <strong>Mobile: </strong>
-                      <span class="color-text-a"> 999 123 456 789</span>
-                    </p>
-                    <p>
-                      <strong>Email: </strong>
-                      <span class="color-text-a"> agents@example.com</span>
-                    </p>
-                    <p>
-                      <strong>skype: </strong>
-                      <span class="color-text-a"> Margaret.Es</span>
-                    </p>
-                    <p>
-                      <strong>Email: </strong>
-                      <span class="color-text-a"> agents@example.com</span>
-                    </p>
-                  </div>
+                  
                 </div>
                 <div class="socials-footer">
-                  <ul class="list-inline">
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="#" class="link-one">
-                        <i class="fa fa-dribbble" aria-hidden="true"></i>
-                      </a>
-                    </li>
-                  </ul>
+                  <ul class="list-unstyled footer-link d-flex footer-social">
+              <li><a style="color: blue;font-size: 30px;"target="_blank" href="http://www.twitter.com/mpostKe" class="p-2"><span class="fa fa-twitter"></span></a></li>
+              <li><a style="color: blue;font-size: 30px;"target="_blank" href="http://www.facebook.com/mpostKe" class="p-2"><span class="fa fa-facebook"></span></a></li>
+              
+              <li><a style="color: blue;font-size: 30px;"target="_blank"href="http://www.instagram.com/mpostKe" class="p-2"><span class="fa fa-instagram"></span></a></li>
+            </ul>
                 </div>
               </div>
             </div>
