--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <span></span>
       </button>
       <a class="navbar-brand text-brand" href="index.html"><span><img src="img/taz.png" 
-        style="border-radius: 50%; height: 2.5rem;">Taz <span style="color: rgb(192, 0, 0);">Technologies</span> </span></a>
+        style="border-radius: 50%; height: 2.5rem;">Taz <span style="color: #c00000;">Technologies</span> </span></a>
       <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" 
         data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
@@ -71,7 +71,7 @@
             <a class="nav-link color" href="#team">Team</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link color" href="#client-container">Clients</a>
+              <a class="nav-link color" href="#clients">Clients</a>
             </li>
           <li class="nav-item">
             <a class="nav-link color" href="#contact">Contact</a>
@@ -149,18 +149,18 @@
   <!--/ Carousel end /-->
 
   <!--/ Services Star /-->
-  <section class="section-services section-t8">
-    <div class="container" id="services">
+  <section class="section-services section-t8" id="services">
+    <div class="container">
         <div class="row">
             <div class="col-md-12">
               <div class="title-wrap d-flex justify-content-between">
                 <div class="title-box">
-                  <h2 class="service-title center" id="service-position">Our Services</h2>
-                  <p id="service-content">
+                  <h2 class="service-title center client-h1" >Our Services</h2>
+                  <p >
                     Taz technologies is a steadily growing and innovative ICT company serving clients in all countries and 
-                    aiming to have a share on the African market.At Taz technologies we are committed at providing
-                    dedicated professional services aimed at yielding solutions that suits your business.This includes
-                    incorporating comprehensive research and analytic s to identify what you require and using our skills 
+                    aiming to have a share on the African market. At Taz technologies we are committed at providing
+                    dedicated professional services aimed at yielding solutions that suits your business. This includes
+                    incorporating comprehensive research and analytics to identify what you require and using our skills 
                     to aid in accelerating growth based on your business models. Our Vision is to excel in our areas of
                     operations and exceed customer expectations. Taz mission is to be the leading ICT company in Africa 
                     that integrates new ideas,quality service and customer satisfaction.
@@ -222,27 +222,18 @@
 
 
   <!--/ product  /-->
-  <section id="flag-product" class="section-property section-t8"style="margin-top: 0px;  
-  padding-top: 0; display: flex; justify-content: center"
-   id="product">
-    <div  style=" column-fill: auto;">
-          <div class="title-wrap d-flex justify-content-between">
-            <div class="title-box">
-            </div>
-          </div>
-            <div   style="background-color: rgb(218, 237, 255);
-            ">
-        <div class="row" >
-      
+  <section id="product" class="section-property" style="margin-top: 2rem; padding-top: 10rem; display: flex; justify-content: center">
+      <div style="background-color: #2491d0;">
+        <div class="row">
           <div class="col-md-6 div-item flag content-section brief-content-one" style="justify-content: center">
-                <div class="colored-line-left"></div>
-                <div class="brief-content-text" style="padding-left: 6rem;">
-                    <div class="title-wrap d-flex justify-content-between">
-                        <div class="title-box">
-                          <h2 class="title-a">Our Flagship Innovation</h2>
-                        </div>
-                      </div>
-                    
+            <div class="colored-line-left"></div>
+              <div class="brief-content-text" style="padding-left: 6rem; padding-top: 2rem;">
+                <div class="title-wrap d-flex justify-content-between">
+                  <div class="title-box">
+                    <h2 class="title-a">Our Flagship Innovation</h2>
+                  </div>
+                </div>
+                    <p style="color:#ffffff">
                     MPost is a patented technology enabling any mobile
                     phone user to transform their phones into a unique mobile
                     postal box.
@@ -258,7 +249,9 @@
                     services.
                     We partner directly with host countries' national post office
                     and our solution is independent of any
-                    telecommunications or internet service providers. Visit Link to learn more <a href="http://www.mpost.co.ke/" target="_blank" style="color: blue;">http://www.mpost.co.ke/</a>
+                    telecommunications or internet service providers.<br>
+                     <a href="http://www.mpost.co.ke/" target="_blank"><br>learn more</a>
+                    </p>
                 </div>
 
             </div>
@@ -278,16 +271,16 @@
 <!-- product end -->
 
   <!--/ Team /-->
-  <section class="section-agents section-t8" id="team">
+  <section class="section-agents team section-t8" id="team">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="title-wrap d-flex justify-content-between">
+          <div >
             <div class="title-box text-center">
-              <h2 class="title-a">TEAM TAZ</h2>
+              <h2 class="client-h1">Our Team</h2>
             </div>
             <div class="title-link">
-              <a href="agents-grid.html">All Agents
+              <a href="agents-grid.html">All Team
                 <span class="ion-ios-arrow-forward"></span>
               </a>
             </div>
@@ -306,9 +299,6 @@
                   <h3 class="title-d">
                     <a href="agent-single.html" class="link-two">ABDUL AZIZ OMAR <br>
                       <span id="br-content"> CEO AND FOUNDER</span>
-                      <!-- <div class="card-category-b">
-                          <span class="category-b">House</span>
-                        </div> -->
                       </a>
                   </h3>
                 </div>
@@ -428,8 +418,8 @@
   <!--/ Testimonials End /-->
   
   <!--/ clients /-->
-  <section>
-    <div id="client-container">
+  <section id="clients">
+    <div id="client-container" class="client">
       <h1 class="client-h1"> Our Clients</h1>
       <div class="igm-item">
           <a href="">
