add more features

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
 <body>
 
   <div class="click-closed"></div>
-  <!--/ Form Search Star /-->
-  <!-- <div class="box-collapse">
+  / Form Search Star /-->
+   <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
     </div>
@@ -128,7 +128,7 @@
       </form>
     </div>
   </div> -->
-  <!--/ Form Search End /-->
+  <!--/ Form Search End /
 
   <!--/ Nav Star /-->
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
