--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EstateAgency Bootstrap Template</title>
+  <title>Taz Technologies</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link  href="img/log.png" rel="icon" style="border-radius: 50%;">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -26,12 +25,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: EstateAgency
-    Theme URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
@@ -39,56 +32,46 @@
   <div class="click-closed"></div>
  
 
-  / Nav Star /
+  <!-- / Nav Star / -->
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
     <div class="container">
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+      <a class="navbar-brand text-brand" href="index.html"><span><img src="img/taz.png" 
+        style="border-radius: 50%; height: 2.5rem;">Taz <span style="color: #c00000;">Technologies</span> </span></a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" 
+      data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
         <span></span>
         <span></span>
       </button>
-     <a class="navbar-brand text-brand" href="index.html"><span><img src="img/images/y.png"></span></a>
-      <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
-        data-target="#navbarTogglerDemo01" aria-expanded="false">
-        <span class="fa fa-search" aria-hidden="true"></span>
-      </button> 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+          <li class="nav-item color">
+            <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#client">Client</a>
+            <a class="nav-link color" href="index.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
+            <a class="nav-link color" href="index.html">Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link color" href="index.html">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#team">Team</a>
-          </li>
+              <a class="nav-link color" href="index.html">Clients</a>
+            </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link color" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
-      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
-        data-target="#navbarTogglerDemo01" aria-expanded="false">
-        <span class="fa fa-search" aria-hidden="true"></span>
-      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
 
-  <!--/ Intro Single star /-->
-  
-  <!--/ Intro Single End /-->
-
   <!--/ Contact Star /-->
-  <section class="contact">
+  <section class="contact" style="padding-top: 10rem;">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -97,6 +80,7 @@
           <div class="row">
             <div class="col-md-7">
               <h1>SEND US A MESSAGE</h1><br>
+              <!-- <hr class="message-hr"> -->
               <form class="form-a contactForm" action="mailto:someone@example.com" method="post" role="form">
                 <div id="sendmessage">Your message has been sent. Thank you!</div>
                 <div id="errormessage"></div>
@@ -126,12 +110,17 @@
                     </div>
                   </div>
                   <div class="col-md-12">
-                    <button type="submit" value="submit" class="btn btn-a">Send Message</button>
+                    <button type="submit" value="submit" class="button btn btn-a">Send Message</button>
                   </div>
                 </div>
               </form>
             </div>
-           <div class="mapouter col-md-5" ><br><h1 align="center">FIND US HERE</h1><div class="gmap_canvas" style="float: right;"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=taztechnologies&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="1" scrolling="yes" marginheight="2" marginwidth="2"></iframe></div></div>
+           <div class="mapouter col-md-5" ><h1>FIND US HERE</h1>
+            <!-- <hr class="map-hr"> -->
+            <div class="gmap_canvas" 
+            ><iframe width="400" height="400" id="gmap_canvas" 
+            src="https://maps.google.com/maps?q=taztechnologies&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+            frameborder="1" scrolling="yes" marginheight="2" marginwidth="2"></iframe></div></div>
       </div>
     </div>
   </section>
@@ -139,115 +128,74 @@
 
   <!--/ footer Star /-->
   <section class="section-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-4">
-          <div class="widget-a">
-            <div class="w-header-a">
-              <h3 class="w-title-a text-brand">EstateAgency</h3>
-            </div>
-            <div class="w-body-a">
-              <p class="w-text-a color-text-a">
-                Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat duis
-                sed aute irure.
-              </p>
-            </div>
-            <div class="w-footer-a">
-              <ul class="list-unstyled">
-                <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com</li>
-                <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234</li>
-              </ul>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-4">
+            <div class="widget-a">
+              <div class="w-header-a">
+                <h3 class="w-title-a text-brand">About Us</h3>
+              </div><hr>
+              <div class="w-body-a">
+                <p class="w-text-a color-text-a list-unstyled">
+                  MPost is a patented technology enabling any mobile phone user to transform their phones into a unique 
+                  mobile postal box. 
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
-          <div class="widget-a">
-            <div class="w-header-a">
-              <h3 class="w-title-a text-brand">The Company</h3>
-            </div>
-            <div class="w-body-a">
+          <div class="col-sm-12 col-md-4 section-md-t3">
+            <div class="widget-a">
+              <div class="w-header-a">
+                <h3 class="w-title-a text-brand">Contact Info</h3>
+              </div><hr>
               <div class="w-body-a">
-                <ul class="list-unstyled">
+                <div class="w-body-a">
+                  <ul class="list-unstyled">
+                    <li class="item-list-a color-a">
+                      2nd Floor Nairobi Business Park Ngong Rd
+                    </li>
+                    <li class="item-list-a ">P.O BOX 0701701411-00100</li>
+                    <li class="item-list-a ">Nairobi, Kenya</li>
+                    <li class="item-list-a color-a">Telephone : 
+                        <span>+254701701411  Nairobi</span><br>
+                        <span>+256417720101  Kampala</span>
+                    </li>
+                    <li>
+                      <span class="item-list-a color-a">Email : </span>
+                      <span>info@taztechnologies.com</span> 
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4 section-md-t3">
+            <div class="widget-a">
+              <div class="w-header-a">
+                <h3 class="w-title-a text-brand">Quick Links</h3>
+              </div><hr>
+              <div class="w-body-a">
+                <ul class="list-unstyled quick-link">
                   <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Site Map</a>
+                    <a href="index.html">Terms of Use</a>
                   </li>
                   <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Legal</a>
+                     <a href="https://mpost.co.ke/mpost/pickndrop.html"> About </a>
                   </li>
                   <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Agent Admin</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Careers</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Affiliate</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Privacy Policy</a>
+                    <a href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
-          <div class="widget-a">
-            <div class="w-header-a">
-              <h3 class="w-title-a text-brand">International sites</h3>
-            </div>
-            <div class="w-body-a">
-              <ul class="list-unstyled">
-                <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Venezuela</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">China</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Hong Kong</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Argentina</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Singapore</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Philippines</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
-  </section>
+    </section>
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <nav class="nav-footer">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="#">Home</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">About</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Property</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Blog</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Contact</a>
-              </li>
-            </ul>
-          </nav>
           <div class="socials-a">
             <ul class="list-inline">
               <li class="list-inline-item">
@@ -278,20 +226,11 @@
             </ul>
           </div>
           <div class="copyright-footer">
-            <p class="copyright color-text-a">
-              &copy; Copyright
-              <span class="color-a">EstateAgency</span> All Rights Reserved.
-            </p>
-          </div>
-          <div class="credits">
-            <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=EstateAgency
-            -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+              <p class="copyright color-text-a">
+                &copy; Copyright <script>document.write(new Date().getFullYear());</script> 
+                <span class="color-a"> All Rights Reserved | <span class="taz">Taz</span><span class="technologies">Technologies</span></span>.
+              </p>
+            </div>
         </div>
       </div>
     </div>
